--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: mateubank
     env: python
-    buildCommand: ""
-    startCommand: python mateubank.py
+    buildCommand: pip install -r requirements.txt
+    startCommand: python MateuBank.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
