--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,1 @@
-# Этот файл нужен, но может быть почти пустым
-# Tkinter обычно предустановлен в Python
-pyinstaller==5.13.0  # опционально, для сборки
+Flask==3.0.2
